--- a/ir/src/main/AndroidManifest.xml
+++ b/ir/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest android:versionCode="1" android:versionName="1.5.2" xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sssemil.sonyirremoute.ir" >
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -9,9 +9,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" 
-        android:versionCode="2"
-        android:versionName="1.5.1">
+        android:theme="@style/AppTheme">
         <activity
             android:name="com.sssemil.sonyirremoute.ir.ir"
             android:label="@string/app_name" >
