--- a/ir/src/main/AndroidManifest.xml
+++ b/ir/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest android:versionCode="1" android:versionName="1.5.3" xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest android:versionCode="1" android:versionName="1.5.2" xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sssemil.sonyirremoute.ir" >
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
