--- a/local.properties
+++ b/local.properties
@@ -8,3 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 sdk.dir=/home/emil/development/android-studio/sdk
+ndk.dir=/home/emil/development/android-ndk-r9
