--- a/ir/src/main/AndroidManifest.xml
+++ b/ir/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest android:versionCode="1" android:versionName="1.5.2" xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sssemil.sonyirremoute.ir" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.sssemil.sonyirremote.ir"
+    android:versionCode="2"
+    android:versionName="1.5.3">
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
@@ -12,7 +13,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.sssemil.sonyirremoute.ir.ir"
+            android:name="com.sssemil.sonyirremote.ir.ir"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
