--- a/ir/src/main/AndroidManifest.xml
+++ b/ir/src/main/AndroidManifest.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sssemil.sonyirremote.ir">
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    package="com.sssemil.sonyirremote.ir"
+    android:versionCode="1"
+    android:versionName="1.5.4" >
+
+    <uses-sdk
+        android:minSdkVersion="16"
+        android:targetSdkVersion="19" />
+
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
