--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sssemil.sonyirremote.ir"
     android:versionCode="1"
-    android:versionName="1.6.2">
+    android:versionName="1.6.3">
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -23,11 +23,12 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".IRSettings"></activity>
+        <activity
+            android:name=".IRSettings"
+            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
