--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sssemil.sonyirremote.ir"
     android:versionCode="1"
-    android:versionName="1.6.3">
+    android:versionName="1.6.4">
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -20,7 +20,8 @@
         android:theme="@style/Holo">
         <activity
             android:name="com.sssemil.sonyirremote.ir.ir"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
