--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sssemil.sonyirremote.ir"
     android:versionCode="1"
-    android:versionName="1.6.8.2">
+    android:versionName="1.6.9.0">
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="8"
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -18,7 +18,7 @@
         android:label="@string/app_name"
         android:theme="@style/Holo">
         <activity
-            android:name="com.sssemil.sonyirremote.ir.ir"
+            android:name="com.sssemil.sonyirremote.ir.IRMain"
             android:label="@string/app_name"
             android:screenOrientation="landscape">
             <intent-filter>
