--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,15 +19,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sssemil.sonyirremote.ir"
     android:versionCode="1"
-    android:versionName="1.6.11.2">
+    android:versionName="1.6.11.3">
 
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_SUPERUSER" /><!--need to fix permissions if they are wrong-->
+    <uses-permission android:name="android.permission.ACCESS_SUPERUSER" />
+    <!--need to fix permissions if they are wrong-->
 
     <application
         android:allowBackup="true"
