--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
      Copyright (c) 2014 Emil Suleymanov
 
      This program is free software; you can redistribute it and/or
@@ -17,19 +18,19 @@
      MA  02110-1301, USA.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sssemil.sonyirremote.ir"
+    package="com.sssemil.ir"
     android:versionCode="1"
-    android:versionName="1.6.12.3">
+    android:versionName="1.6.12.4">
 
     <uses-sdk
         android:minSdkVersion="16"
-        android:targetSdkVersion="19" />
+        android:targetSdkVersion="20" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_SUPERUSER" />
     <!--need to fix permissions if they are wrong-->
+    <uses-permission android:name="android.permission.ACCESS_SUPERUSER" />
 
     <application
         android:allowBackup="true"
@@ -37,7 +38,7 @@
         android:label="@string/app_name"
         android:theme="@style/Holo">
         <activity
-            android:name="com.sssemil.sonyirremote.ir.IRMain"
+            android:name="com.sssemil.ir.IRMain"
             android:label="@string/app_name"
             android:screenOrientation="landscape">
             <intent-filter>
