--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,68 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (c) 2014 Emil Suleymanov
-
-     This program is free software; you can redistribute it and/or
-     modify it under the terms of the GNU General Public License
-     as published by the Free Software Foundation; either version 2
-     of the License, or (at your option) any later version.
-
-     This program is distributed in the hope that it will be useful,
-     but WITHOUT ANY WARRANTY; without even the implied warranty of
-     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-     GNU General Public License for more details.
-
-     You should have received a copy of the GNU General Public License
-     along with this program; if not, write to the Free Software
-     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
-     MA  02110-1301, USA.
--->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sssemil.ir"
     android:versionCode="1"
-    android:versionName="1.7.2.0">
+    android:versionName="1.8.0.0" >
 
     <uses-sdk
         android:minSdkVersion="16"
-        android:targetSdkVersion="20" />
+        android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!--need to fix permissions if they are wrong-->
+    <!-- need to fix permissions if they are wrong -->
     <uses-permission android:name="android.permission.ACCESS_SUPERUSER" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Holo">
-
+        android:theme="@style/AppTheme" >
         <activity
-            android:name="com.sssemil.ir.IRMain"
+            android:name=".IRMain"
             android:label="@string/app_name"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".IRSettings"
             android:label="@string/action_settings"
-            android:theme="@style/Holo"
-            android:screenOrientation="landscape"/>
-
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".IRAbout"
             android:label="@string/about"
-            android:theme="@style/Holo" />
-
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".IRLicense"
             android:label="@string/open_source_license"
-            android:theme="@style/Holo" />
+            android:theme="@style/AppTheme" />
+
+        <service
+            android:name=".IRService"
+            android:exported="false" />
     </application>
 
 </manifest>
